# react_rust_metaverse

./: .gitignore  Cargo.toml  tips.md  tree
backend/: .gitignore  Cargo.toml
backend/src/: cargo_definitions.md  main.rs
backend/tests/: integration_test.rs
metaverse-frontend/: package-lock.json  package.json
shared_lib/: Cargo.toml  build.rs
shared_lib/src/: lib.rs
