[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
http-body-util = "0.1.3"
tower = "0.5.2"
bytes = "1.10.1"
